Re-organize files

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,7 +14,7 @@
       <header class="masthead mb-auto">
         <div class="inner">
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="{% url 'LocalFolioPOC:index' %}">Home</a>
+            <a class="nav-link active" href="{% url 'finance:index' %}">Home</a>
           </nav>
         </div>
       </header>
