--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content%}
     <main role="main" class="inner cover">
         <p class="lead">
-          <a href="{% url 'LocalFolioPOC:stock_history_list' %}" class="btn btn-lg btn-secondary">View Stocks!</a>
+          <a href="{% url 'finance:stock_history_list' %}" class="btn btn-lg btn-secondary">View Stocks!</a>
         </p>
       </main>
 {% endblock content %}
