--- a/templates/static/css/styles.css
+++ b/templates/static/css/styles.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-  color: #31a0b8;
+  color: #38a762;
 }
 
 /* Custom default button */
@@ -37,13 +37,13 @@ body {
   -ms-flex-pack: center;
   -webkit-box-pack: center;
   justify-content: center;
-  color: #d7d6d6;
+  color: #d6d6d6;
   /*text-shadow: 0 .05rem .1rem rgba(76, 20, 20, 0.5);*/
   /*box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
 }
 
 .cover-container {
-  max-width: 70em;
+  max-width: 120em;
 }
 
 
@@ -61,7 +61,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: #38a762;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -76,8 +76,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: #38a762;
+  border-bottom-color: #391515;
 }
 
 @media (min-width: 48em) {
