--- a/templates/stockhistory_list.html
+++ b/templates/stockhistory_list.html
@@ -5,7 +5,7 @@
 
     <form method="get">
         {{ filter.form | bootstrap }}
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-success">Search</button>
     </form>
     <table class="table table-responsive-sm table-light">
         <table class="table align-middle">
