--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LocalFolio Finance</title>
+    <title>The Finance</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -14,7 +14,7 @@
 <div class="cover-container d-flex flex-column bd-highlight mb-3">
     <header class="masthead mb-auto">
         <div class="inner">
-            <h3 class="masthead-brand"><a class="nav-link active" href="{% url 'finance:index' %}">LocalFolio</a></h3>
+            <h3 class="masthead-brand"><a class="nav-link active" href="{% url 'finance:index' %}">StockStock</a></h3>
 
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="{% url 'finance:index' %}">Home</a>
